<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/icon_suhu"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ikon_termometer"
        android:src="@drawable/gambar_suhu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_konversi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konverter_suhu"
        android:textSize="22sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_suhu" />

    <TextView
        android:id="@+id/text_hasil_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hasil_dalam"
        android:textSize="24sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/edit_text_result"
        app:layout_constraintTop_toBottomOf="@id/text_konversi_title" />

    <EditText
        android:id="@+id/edit_text_result"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_background"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hasil_label"
        android:autofillHints="no"
        android:textAlignment="center"
        tools:text="93.20 °F"
        />

    <TextView
        android:id="@+id/text_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/kembali_ke_halaman_utama"
        android:textSize="18sp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/blue_primary"
        android:onClick="backToMainActivity"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_result" />

    <ImageView
        android:id="@+id/logo_tx_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_aplikasi"
        android:src="@drawable/logo_tx"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>