<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/blue_background"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_back_about"
            android:layout_width="27dp"
            android:layout_height="34dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/kembali"
            android:src="@drawable/ic_navigate_back"
            android:onClick="onBackPressed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_background"
            app:layout_constraintBottom_toBottomOf="@id/header_background"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tentang_aplikasi"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintStart_toEndOf="@id/icon_back_about"
            app:layout_constraintTop_toTopOf="@id/icon_back_about"
            app:layout_constraintBottom_toBottomOf="@id/icon_back_about"
            android:layout_marginStart="16dp"/>

        <LinearLayout
            android:id="@+id/content_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/header_background">

            <TextView
                android:id="@+id/text_app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_text"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="4dp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="40dp"
                tools:targetApi="o" />

            <ImageView
                android:id="@+id/logo_tx_about"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo_aplikasi"
                android:src="@drawable/logo_tx"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>